<resources>
    <string name="app_name">BloodBankApp</string>


    <!-- LoginActivity-->
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="title">Welcome to Blood Bank</string>

    <!--    RegisterActivity-->
    <string name="back">Back</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>
    <string name="register_form">Registration form</string>
    <string name="your_name">Your name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="authentcation">Authentcation</string>
    <string name="candidate_name">User name</string>
    <string name="address">Address</string>
    <string name="upload_image">Upload Image</string>
    <string name="blood_grp">Blood group:</string>
    <string name="i_want_to_be_a_donor">I WANT TO BE A DONOR</string>
    <string name="login">Login</string>
    <string name="hint_select">Select</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_account_signup_here">Don\'t have account? SignUp here</string>
    <string name="health_detail">HEALTH DETAIL</string>
    <string name="addressHeading">Address :</string>
    <string name="detail">Open Detail</string>


</resources>