<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_pink">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glH60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glV65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".65" />

    <TextView
        android:id="@+id/tvHeadingHealthDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/health_detail"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glV10"
        app:layout_constraintTop_toBottomOf="@id/glH10" />

    <TextView
        android:id="@+id/tvBloodGrpUserDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/blood_grp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glV10"
        app:layout_constraintTop_toBottomOf="@id/tvHeadingHealthDetail" />

    <TextView
        android:id="@+id/tvBloodGrpNameUserDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="O+"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/glV65"
        app:layout_constraintTop_toBottomOf="@id/tvHeadingHealthDetail" />

    <TextView
        android:id="@+id/tvContactDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="CONTACT DETAIL"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glV10"
        app:layout_constraintTop_toBottomOf="@id/glH25" />

    <TextView
        android:id="@+id/tvHeadingAddressUserDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/addressHeading"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glV10"
        app:layout_constraintTop_toBottomOf="@id/tvContactDetail" />

    <TextView
        android:id="@+id/tvAddressUserDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="XYZ,STREET CANADAbkjgkvhbbbbvhvhvhvhvhvhb"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/glV65"
        app:layout_constraintStart_toStartOf="@id/glV10"
        app:layout_constraintTop_toBottomOf="@id/tvHeadingAddressUserDetail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReachViaEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/GREENY"
        android:text="Reach via email"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glH60" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnReachViaPhone"
        app:layout_constraintTop_toBottomOf="@id/btnReachViaEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReachViaPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/GREENY"
        android:text="Reach via phone"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOr" />

</androidx.constraintlayout.widget.ConstraintLayout>